changing profile source image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="10px">
         <tr>
-            <td><img src="/images/pimlada-200pxx.png" alt="Pimlada Profile Picture"/>
+            <td><img src="https://raw.githubusercontent.com/tuck-pimlada/cv/master/images/pimlada-200pxx.png" alt="Pimlada Profile Picture"/>
             </td>
             <td><h1 cellspacing="10">Pimlada Chow</h1>
                 <p>Graduate student in <a href="https://www.nucamp.co/"><strong>Nucamp Coding Bootcamp</strong></a></p>
