--- a/index.html
+++ b/index.html
@@ -4,142 +4,183 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pimlada's Personal Site</title>
+    
+    <!-- Adding Internal CSS -->
+    <style>
+        body {
+            background-color: #968c83;
+        }
+
+        hr {
+            border-style: none;
+            border-top: 5px dotted;
+            width: 10%;
+            color: #fff5ea;
+        }
+
+        .bio, .extra {
+            background-color: #f7dad9;
+        }
+
+        .education, .recent-projects, .skills {
+            background-color: #fff5ea;
+            border-radius: 30px;
+            padding: 0 0 10px 0;
+        }
+
+        h2 {
+           background-color:#d6d2c4; 
+           border-radius: 30px;
+           padding: 10px 10px 10px 30px;
+        }
+    </style>
+
 </head>
 <body>
-    <table cellspacing="10px">
-        <tr>
-            <td><img src="https://raw.githubusercontent.com/tuck-pimlada/cv/master/images/pimlada-200pxx.png" alt="Pimlada Profile Picture"/>
-            </td>
-            <td><h1 cellspacing="10">Pimlada Chow</h1>
-                <p>Graduate student in <a href="https://www.nucamp.co/"><strong>Nucamp Coding Bootcamp</strong></a></p>
-                <p>Focusing on <em>FullStack Web & Mobile Development</em></p>
-            </td>
-        </tr>
-    </table>
-    
+    <div class="bio">
+        <table cellspacing="10px">
+            <tr>
+                <td><img src="https://raw.githubusercontent.com/tuck-pimlada/cv/master/images/pimlada-200pxx.png" alt="Pimlada Profile Picture"/>
+                </td>
+                <td><h1 cellspacing="10">Pimlada Chow</h1>
+                    <p>Graduate student in <a href="https://www.nucamp.co/"><strong>Nucamp Coding Bootcamp</strong></a></p>
+                    <p>Focusing on <em>FullStack Web & Mobile Development</em></p>
+                </td>
+            </tr>
+        </table>
+    </div>
     <hr>
-    <h2>Education</h2>
-    <ul>
-        <li>2020 Nucamp Coding Bootcamp</li>
-            <ol>
-                <li>Web Development Fundamentals </li>
-                <li>Front End Web + Mobile Development</li>
-                <li>Full Stack Web + Mobile Development</li>
-            </ol><br>
-        <li>2020 Udemy</li><br>
-        <li>2020 FreeCodeCamp</li>
-    </ul>
-    <h3>Recent Projects</h3>
-    <ul>
-        <li>
-            <strong>Pimlada Chow CV</strong><br>
-            <caption><em>A Plain HTML Website build for personal CV</em></caption>
-        </li>
-
-    </ul>
+    <div class="education">
+        <h2>Education</h2>
+        <ul>
+            <li>2020 Nucamp Coding Bootcamp</li>
+                <ol>
+                    <li>Web Development Fundamentals </li>
+                    <li>Front End Web + Mobile Development</li>
+                    <li>Full Stack Web + Mobile Development</li>
+                </ol><br>
+            <li>2020 Udemy</li><br>
+            <li>2020 FreeCodeCamp</li>
+        </ul>
+    </div>
     <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10px"> 
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>Visual Studio Code</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                   <tr>
-                       <td>HTML</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                   </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Bootstrap</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JSON</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Command line Inteface</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>React</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Redux</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>React Native</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>  
-                    <tr>
-                        <td>JQuery</td>
-                       <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>LESS</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>SASS, SCSS</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>REST API</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>Andriod Studio</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Expo SDK</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>NPM</td>
-                    <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Git & GitHub</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>NodeJS</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Express</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>MongoDB</td>
-                        <td>⭐⭐⭐</td>
-                    </tr> 
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="recent-projects">
+    <h2>Recent Projects</h2>
+        <ul>
+            <li>
+                <strong>Pimlada Chow CV</strong><br>
+                <caption><em>A basic html, css and JavaScript website for personal cv</em></caption>
+            </li>
+        </ul>
+    </div>
     <hr>
-    <a href="hobbies.html">✨ My Hobbies</a> | <a href="contact-me.html">📱 Contact Me</a>
+    <div class="skills">
+        <h2>Skills</h2>
+        <table cellspacing="10px"> 
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td>Visual Studio Code</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    <tr>
+                        <td>HTML</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                    </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Bootstrap</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>JSON</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Command line Inteface</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>React</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Redux</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>React Native</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>  
+                        <tr>
+                            <td>JQuery</td>
+                        <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>LESS</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>SASS, SCSS</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>REST API</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>Andriod Studio</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Expo SDK</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>NPM</td>
+                        <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Git & GitHub</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>NodeJS</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Express</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>MongoDB</td>
+                            <td>⭐⭐⭐</td>
+                        </tr> 
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <hr>
+    <!-- Adding Inline CSS -->
+    <div class="extra" style="text-align: center; font-size: 1.5em;">
+        <a href="hobbies.html">✨ My Hobbies</h3></a> | <a href="contact-me.html">📱 Contact Me</a>
+    </div>
 </body>
 </html>
